--- a/index.html
+++ b/index.html
@@ -3,110 +3,217 @@
 		<title>Wallpapers</title>
 	</head>
 	<body>
-<img src="./Wallpapers_files/2021-02-21 (1).png" width="1920" height="1080">
-<img src="./Wallpapers_files/4t1r4kenctj61.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/5u0n1vv51lw61.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/5xcb4pqt1vj61.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/6a4omgd4qpj61.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/79avborlpyh61.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/7f4se6dpzqj61.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/8s9qn1kptmi61.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/9UIjZrO-matrix-movie-wallpapers.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/alena-aenami-chillcowfin.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/anonymous_mask_2-wallpaper-1920x1200.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/auto_night_sky_silhouette_stars_radiance_118955_1920x1080.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/b1lxk0ktq0i61.png" width="1920" height="1080">
-<img src="./Wallpapers_files/background_bright_light_splinters_85568_1920x1080.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/bc2kxj76xvj61.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/black_light_dark_figures_73356_1920x1080.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/city_vector_panorama_119914_1920x1080.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/code_lines_programming_130775_1920x1080.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/commands_linux-wallpaper-1920x1200.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/cucc.txt" width="1920" height="1080">
-<img src="./Wallpapers_files/dragon_background_light_shadow_16514_1920x1080.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/Em1L2mj-linux-wallpaper.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/forest_fog_trees_126479_1920x1080.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/fox_illustration_background_tongue_66520_1920x1080.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/full_moon_forest_vector_135243_1920x1080.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/g63xqkjk5ni61.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/h6987eph10i61.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/hdihjjzvtai61.png" width="1920" height="1080">
-<img src="./Wallpapers_files/irdnz4eltmi61.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/joystick_controller_gamepad_126439_1920x1080.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/kbkotwa7wdw61.png" width="1920" height="1080">
-<img src="./Wallpapers_files/keyboard_key_backlight_128828_1920x1080.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/lawn_forest_mountains_144578_1920x1080.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/leaves_plant_green_118405_1920x1080.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/lighthouse_night_landscape_143019_1920x1080.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/macos_mojave_night-wallpaper-1920x1200.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/macos_sierra_2-wallpaper-1920x1200.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/man_hoody_hood_graphics_57295_1920x1080.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/matrix_code_numbers_147523_1920x1080.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/mevwzxctulj61.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/mountains_night_northern_lights_148100_1920x1080.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/neon_light_circles_83499_1920x1080.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/northern_lights_night_night_sky_phenomenon_73483_1920x1080.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/owpxdd1a2zj61.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/pexels-david-besh-884788.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/pexels-martin-damboldt-814499.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/Poker_Background_Arcade.png" width="1920" height="1080">
-<img src="./Wallpapers_files/Poker_Background_Bar.png" width="1920" height="1080">
-<img src="./Wallpapers_files/Poker_Background_Basement.png" width="1920" height="1080">
-<img src="./Wallpapers_files/Poker_Background_Basic.png" width="1920" height="1080">
-<img src="./Wallpapers_files/Poker_Background_Cove.png" width="1920" height="1080">
-<img src="./Wallpapers_files/Poker_Background_FloatingIslands.png" width="1920" height="1080">
-<img src="./Wallpapers_files/Poker_Background_NightCity.png" width="1920" height="1080">
-<img src="./Wallpapers_files/Poker_Background_Park.png" width="1920" height="1080">
-<img src="./Wallpapers_files/Poker_Background_Space.png" width="1920" height="1080">
-<img src="./Wallpapers_files/pyramids_starry_sky_night_161840_1920x1080.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/README.md" width="1920" height="1080">
-<img src="./Wallpapers_files/road_marking_evening_clouds_horizon_120298_1920x1080.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/samurai-sword-1920Ă_1080.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/SDIM6864x2.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/silhouette_starry_sky_shooting_star_131373_1920x1080.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/skbvzdkr6ni61.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/smoke_fire_color_129526_1920x1080.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/starry_sky_clouds_sunset_120716_1920x1080.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/starry_sky_mountains_art_128353_1920x1080.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/starry_sky_mountains_sunrise_120808_1920x1080.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/starry_sky_night_tree_117028_1920x1080.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/starry_sky_night_trees_night_landscape_118760_1920x1080.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/style_abstract_dragon_74494_1920x1080.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/triangles_background_light_91693_1920x1080.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/wi2zchccloj61.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/winter-snow-sunrise-sunset-colors-1920Ă_1080.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/wp1811152-mad-max-wallpapers.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/wp1820012-blade-runner-wallpapers.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/wp1970152-inglourious-basterds-wallpapers.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/wp1970168-inglourious-basterds-wallpapers.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/wp2015154-mad-max-fury-road-wallpapers.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/wp2015190-mad-max-fury-road-wallpapers.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/wp2167427-leon-the-professional-wallpapers.png" width="1920" height="1080">
-<img src="./Wallpapers_files/wp2203655-blade-runner-2049-wallpapers.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/wp2203660-blade-runner-2049-wallpapers.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/wp2203661-blade-runner-2049-wallpapers.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/wp2203665-blade-runner-2049-wallpapers.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/wp2203670-blade-runner-2049-wallpapers.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/wp2254575-simplistic-wallpapers.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/wp2577165-wallpaper-hipster.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/wp2691423-cyber-security-wallpapers.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/wp2691479-cyber-security-wallpapers.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/wp2691558-cyber-security-wallpapers.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/wp2691559-cyber-security-wallpapers.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/wp2691567-cyber-security-wallpapers.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/wp2950965-wallpaper-forest.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/wp3978507-minimal-wallpapers.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/wp3978533-minimal-wallpapers.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/wp3978567-minimal-wallpapers.png" width="1920" height="1080">
-<img src="./Wallpapers_files/wp3978570-minimal-wallpapers.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/wp4448025-spaceship-minimalist-wallpapers.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/wp5140187-kali-linux-android-wallpapers.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/wp5856973-star-wars-mandalorian-minimalist-desktop-wallpapers.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/wp6190678-4k-desktop-kali-linux-wallpapers.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/wp6190711-4k-desktop-kali-linux-wallpapers.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/wp6477079-minimal-star-wars-wallpapers.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/wp8541024-controller-minimal-wallpapers.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/z0151aobhth61.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/z99vnat7noj61.jpg" width="1920" height="1080">
-<img src="./Wallpapers_files/zafq6ovxisj61.jpg" width="1920" height="1080">
+<img src="2021-02-21 (1).png" width="1920" height="1080">
+
+<img src="4t1r4kenctj61.jpg" width="1920" height="1080">
+
+<img src="5u0n1vv51lw61.jpg" width="1920" height="1080">
+
+<img src="5xcb4pqt1vj61.jpg" width="1920" height="1080">
+
+<img src="6a4omgd4qpj61.jpg" width="1920" height="1080">
+
+<img src="79avborlpyh61.jpg" width="1920" height="1080">
+
+<img src="7f4se6dpzqj61.jpg" width="1920" height="1080">
+
+<img src="8s9qn1kptmi61.jpg" width="1920" height="1080">
+
+<img src="9UIjZrO-matrix-movie-wallpapers.jpg" width="1920" height="1080">
+
+<img src="alena-aenami-chillcowfin.jpg" width="1920" height="1080">
+
+<img src="anonymous_mask_2-wallpaper-1920x1200.jpg" width="1920" height="1080">
+
+<img src="auto_night_sky_silhouette_stars_radiance_118955_1920x1080.jpg" width="1920" height="1080">
+
+<img src="b1lxk0ktq0i61.png" width="1920" height="1080">
+
+<img src="background_bright_light_splinters_85568_1920x1080.jpg" width="1920" height="1080">
+
+<img src="bc2kxj76xvj61.jpg" width="1920" height="1080">
+
+<img src="black_light_dark_figures_73356_1920x1080.jpg" width="1920" height="1080">
+
+<img src="city_vector_panorama_119914_1920x1080.jpg" width="1920" height="1080">
+
+<img src="code_lines_programming_130775_1920x1080.jpg" width="1920" height="1080">
+
+<img src="commands_linux-wallpaper-1920x1200.jpg" width="1920" height="1080">
+
+<img src="cucc.txt" width="1920" height="1080">
+
+<img src="dragon_background_light_shadow_16514_1920x1080.jpg" width="1920" height="1080">
+
+<img src="Em1L2mj-linux-wallpaper.jpg" width="1920" height="1080">
+
+<img src="forest_fog_trees_126479_1920x1080.jpg" width="1920" height="1080">
+
+<img src="fox_illustration_background_tongue_66520_1920x1080.jpg" width="1920" height="1080">
+
+<img src="full_moon_forest_vector_135243_1920x1080.jpg" width="1920" height="1080">
+
+<img src="g63xqkjk5ni61.jpg" width="1920" height="1080">
+
+<img src="h6987eph10i61.jpg" width="1920" height="1080">
+
+<img src="hdihjjzvtai61.png" width="1920" height="1080">
+
+<img src="irdnz4eltmi61.jpg" width="1920" height="1080">
+
+<img src="joystick_controller_gamepad_126439_1920x1080.jpg" width="1920" height="1080">
+
+<img src="kbkotwa7wdw61.png" width="1920" height="1080">
+
+<img src="keyboard_key_backlight_128828_1920x1080.jpg" width="1920" height="1080">
+
+<img src="lawn_forest_mountains_144578_1920x1080.jpg" width="1920" height="1080">
+
+<img src="leaves_plant_green_118405_1920x1080.jpg" width="1920" height="1080">
+
+<img src="lighthouse_night_landscape_143019_1920x1080.jpg" width="1920" height="1080">
+
+<img src="macos_mojave_night-wallpaper-1920x1200.jpg" width="1920" height="1080">
+
+<img src="macos_sierra_2-wallpaper-1920x1200.jpg" width="1920" height="1080">
+
+<img src="man_hoody_hood_graphics_57295_1920x1080.jpg" width="1920" height="1080">
+
+<img src="matrix_code_numbers_147523_1920x1080.jpg" width="1920" height="1080">
+
+<img src="mevwzxctulj61.jpg" width="1920" height="1080">
+
+<img src="mountains_night_northern_lights_148100_1920x1080.jpg" width="1920" height="1080">
+
+<img src="neon_light_circles_83499_1920x1080.jpg" width="1920" height="1080">
+
+<img src="northern_lights_night_night_sky_phenomenon_73483_1920x1080.jpg" width="1920" height="1080">
+
+<img src="owpxdd1a2zj61.jpg" width="1920" height="1080">
+
+<img src="pexels-david-besh-884788.jpg" width="1920" height="1080">
+
+<img src="pexels-martin-damboldt-814499.jpg" width="1920" height="1080">
+
+<img src="Poker_Background_Arcade.png" width="1920" height="1080">
+
+<img src="Poker_Background_Bar.png" width="1920" height="1080">
+
+<img src="Poker_Background_Basement.png" width="1920" height="1080">
+
+<img src="Poker_Background_Basic.png" width="1920" height="1080">
+
+<img src="Poker_Background_Cove.png" width="1920" height="1080">
+
+<img src="Poker_Background_FloatingIslands.png" width="1920" height="1080">
+
+<img src="Poker_Background_NightCity.png" width="1920" height="1080">
+
+<img src="Poker_Background_Park.png" width="1920" height="1080">
+
+<img src="Poker_Background_Space.png" width="1920" height="1080">
+
+<img src="pyramids_starry_sky_night_161840_1920x1080.jpg" width="1920" height="1080">
+
+<img src="README.md" width="1920" height="1080">
+
+<img src="road_marking_evening_clouds_horizon_120298_1920x1080.jpg" width="1920" height="1080">
+
+<img src="samurai-sword-1920×1080.jpg" width="1920" height="1080">
+
+<img src="SDIM6864x2.jpg" width="1920" height="1080">
+
+<img src="silhouette_starry_sky_shooting_star_131373_1920x1080.jpg" width="1920" height="1080">
+
+<img src="skbvzdkr6ni61.jpg" width="1920" height="1080">
+
+<img src="smoke_fire_color_129526_1920x1080.jpg" width="1920" height="1080">
+
+<img src="starry_sky_clouds_sunset_120716_1920x1080.jpg" width="1920" height="1080">
+
+<img src="starry_sky_mountains_art_128353_1920x1080.jpg" width="1920" height="1080">
+
+<img src="starry_sky_mountains_sunrise_120808_1920x1080.jpg" width="1920" height="1080">
+
+<img src="starry_sky_night_tree_117028_1920x1080.jpg" width="1920" height="1080">
+
+<img src="starry_sky_night_trees_night_landscape_118760_1920x1080.jpg" width="1920" height="1080">
+
+<img src="style_abstract_dragon_74494_1920x1080.jpg" width="1920" height="1080">
+
+<img src="triangles_background_light_91693_1920x1080.jpg" width="1920" height="1080">
+
+<img src="wi2zchccloj61.jpg" width="1920" height="1080">
+
+<img src="winter-snow-sunrise-sunset-colors-1920×1080.jpg" width="1920" height="1080">
+
+<img src="wp1811152-mad-max-wallpapers.jpg" width="1920" height="1080">
+
+<img src="wp1820012-blade-runner-wallpapers.jpg" width="1920" height="1080">
+
+<img src="wp1970152-inglourious-basterds-wallpapers.jpg" width="1920" height="1080">
+
+<img src="wp1970168-inglourious-basterds-wallpapers.jpg" width="1920" height="1080">
+
+<img src="wp2015154-mad-max-fury-road-wallpapers.jpg" width="1920" height="1080">
+
+<img src="wp2015190-mad-max-fury-road-wallpapers.jpg" width="1920" height="1080">
+
+<img src="wp2167427-leon-the-professional-wallpapers.png" width="1920" height="1080">
+
+<img src="wp2203655-blade-runner-2049-wallpapers.jpg" width="1920" height="1080">
+
+<img src="wp2203660-blade-runner-2049-wallpapers.jpg" width="1920" height="1080">
+
+<img src="wp2203661-blade-runner-2049-wallpapers.jpg" width="1920" height="1080">
+
+<img src="wp2203665-blade-runner-2049-wallpapers.jpg" width="1920" height="1080">
+
+<img src="wp2203670-blade-runner-2049-wallpapers.jpg" width="1920" height="1080">
+
+<img src="wp2254575-simplistic-wallpapers.jpg" width="1920" height="1080">
+
+<img src="wp2577165-wallpaper-hipster.jpg" width="1920" height="1080">
+
+<img src="wp2691423-cyber-security-wallpapers.jpg" width="1920" height="1080">
+
+<img src="wp2691479-cyber-security-wallpapers.jpg" width="1920" height="1080">
+
+<img src="wp2691558-cyber-security-wallpapers.jpg" width="1920" height="1080">
+
+<img src="wp2691559-cyber-security-wallpapers.jpg" width="1920" height="1080">
+
+<img src="wp2691567-cyber-security-wallpapers.jpg" width="1920" height="1080">
+
+<img src="wp2950965-wallpaper-forest.jpg" width="1920" height="1080">
+
+<img src="wp3978507-minimal-wallpapers.jpg" width="1920" height="1080">
+
+<img src="wp3978533-minimal-wallpapers.jpg" width="1920" height="1080">
+
+<img src="wp3978567-minimal-wallpapers.png" width="1920" height="1080">
+
+<img src="wp3978570-minimal-wallpapers.jpg" width="1920" height="1080">
+
+<img src="wp4448025-spaceship-minimalist-wallpapers.jpg" width="1920" height="1080">
+
+<img src="wp5140187-kali-linux-android-wallpapers.jpg" width="1920" height="1080">
+
+<img src="wp5856973-star-wars-mandalorian-minimalist-desktop-wallpapers.jpg" width="1920" height="1080">
+
+<img src="wp6190678-4k-desktop-kali-linux-wallpapers.jpg" width="1920" height="1080">
+
+<img src="wp6190711-4k-desktop-kali-linux-wallpapers.jpg" width="1920" height="1080">
+
+<img src="wp6477079-minimal-star-wars-wallpapers.jpg" width="1920" height="1080">
+
+<img src="wp8541024-controller-minimal-wallpapers.jpg" width="1920" height="1080">
+
+<img src="z0151aobhth61.jpg" width="1920" height="1080">
+
+<img src="z99vnat7noj61.jpg" width="1920" height="1080">
+
+<img src="zafq6ovxisj61.jpg" width="1920" height="1080">
+
+
 </body></html>
